--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="theme-color" content="#020617">
   <meta name="theme-color" content="#020617" />
 
   <link
@@ -207,6 +206,7 @@
       min-height: 0;
     }
 
+    /* MODIFIED: Add scrolling to panel content */
     .panel-content {
       display: flex; flex-direction: column; gap: var(--gap-layout);
       margin: 0 auto; width: 100%; height: 100%; min-height: 0;
@@ -218,51 +218,51 @@
 
     /* --- LAYOUT 70:30 SPLIT FOR GLUE DASHBOARD --- */
     .glue-dashboard {
-        display:flex; flex-direction:column;
-        height:100%; min-height: 400px;
-        background:#0f172a;
-        overflow:hidden;
-        width:100%;
+      display:flex; flex-direction:column;
+      height:100%; min-height: 400px;
+      background:#0f172a;
+      overflow:hidden;
+      width:100%;
     }
 
     .glue-body-split {
-        flex: 1;
-        display: flex;
-        flex-direction: row;
-        overflow: hidden;
-        position: relative;
+      flex: 1;
+      display: flex;
+      flex-direction: row;
+      overflow: hidden;
+      position: relative;
     }
 
     .glue-main-area {
-        flex: 7;
-        display: flex;
-        flex-direction: column;
-        overflow: hidden;
-        background: #020617;
-        border-right: 1px solid var(--border-subtle);
+      flex: 7;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+      background: #020617;
+      border-right: 1px solid var(--border-subtle);
     }
 
     .glue-summary-area {
-        flex: 3;
-        background: #172554;
-        display: flex;
-        flex-direction: column;
-        padding: 16px 12px;
-        gap: 16px;
-        overflow-y: auto;
-        padding-bottom: calc(var(--tab-h) + env(safe-area-inset-bottom) + 10px);
+      flex: 3;
+      background: #172554;
+      display: flex;
+      flex-direction: column;
+      padding: 16px 12px;
+      gap: 16px;
+      overflow-y: auto;
+      padding-bottom: calc(var(--tab-h) + env(safe-area-inset-bottom) + 10px);
     }
 
     .sum-item {
-        background: rgba(255,255,255,0.03);
-        border: 1px solid rgba(255,255,255,0.08);
-        border-radius: 12px;
-        padding: 10px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        gap: 4px;
+      background: rgba(255,255,255,0.03);
+      border: 1px solid rgba(255,255,255,0.08);
+      border-radius: 12px;
+      padding: 10px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      gap: 4px;
     }
     .sum-lbl { font-size: 0.55rem; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px; }
     .sum-val { font-family: var(--font-num); font-size: 1.4rem; font-weight: 800; color: #fff; line-height: 1; }
@@ -270,21 +270,21 @@
     .text-ng { color: var(--danger); }
 
     .btn-header-cap {
-        width: 44px; height: 44px;
-        border-radius: 12px;
-        background: #3b82f6;
-        color: #fff;
-        border: none;
-        display: flex; align-items: center; justify-content: center;
-        font-size: 1.2rem;
-        cursor: pointer;
-        box-shadow: 0 4px 15px rgba(59, 130, 246, 0.4);
-        transition: 0.2s;
+      width: 44px; height: 44px;
+      border-radius: 12px;
+      background: #3b82f6;
+      color: #fff;
+      border: none;
+      display: flex; align-items: center; justify-content: center;
+      font-size: 1.2rem;
+      cursor: pointer;
+      box-shadow: 0 4px 15px rgba(59, 130, 246, 0.4);
+      transition: 0.2s;
     }
     .btn-header-cap:active { transform: scale(0.92); }
     .btn-header-cap.frozen {
-        background: #ef4444;
-        box-shadow: 0 4px 15px rgba(239, 68, 68, 0.4);
+      background: #ef4444;
+      box-shadow: 0 4px 15px rgba(239, 68, 68, 0.4);
     }
 
     .glue-compact-header{
@@ -385,9 +385,6 @@
     }
     .tab-item.active { color: var(--primary); }
     .tab-lbl { font-size: 0.65rem; font-weight: 700; }
-    .tab-item i { transition: transform 0.2s; }
-    .tab-item.active i { transform: translateY(-2px); }
-
     .display-none { display: none !important; }
 
     .glue-list-header {
@@ -435,6 +432,7 @@
       .result-dashboard { padding: 12px 14px; }
     }
 
+    /* Bigger bottom-tab icons + labels (only tab-bar) */
     .tab-bar .tab-item svg{
       width: 26px;
       height: 26px;
@@ -462,7 +460,6 @@
         -webkit-text-size-adjust: 100%;
         text-size-adjust: 100%;
       }
-
       .tab-bar .tab-item svg{
         width: 30px;
         height: 30px;
@@ -470,13 +467,11 @@
         display: block;
         flex-shrink: 0;
       }
-
       .tab-bar .tab-lbl{
         font-size: 0.75rem;
         font-weight: 800;
         line-height: 1;
       }
-
       .tab-bar{
         height: 68px;
         padding-top: 6px;
@@ -484,6 +479,7 @@
       }
     }
 
+    /* IMPORTANT: your CSS currently targets i, but lucide uses svg */
     .tab-item svg { transition: transform 0.2s; }
     .tab-item.active svg { transform: translateY(-2px); }
   </style>
@@ -782,9 +778,8 @@
         const camH = Math.round(frameH * 0.50);
         document.documentElement.style.setProperty("--viewport-h", `${camH}px`);
 
-        // Resize Dist Canvas
         const wrap = document.getElementById("dist-wrapper");
-        if (wrap && wrap.offsetWidth) {
+        if(wrap && wrap.offsetWidth) {
           distCanvas.width = wrap.offsetWidth;
           distCanvas.height = wrap.offsetHeight;
         }
@@ -845,9 +840,8 @@
         resetSheetUI();
       }
 
-      // Reset scroll position on tab switch
       const pc = document.querySelector('.panel-content');
-      if (pc) pc.scrollTop = 0;
+      if(pc) pc.scrollTop = 0;
 
       applyAutoFitLayout();
       lucide.createIcons();
@@ -991,55 +985,77 @@
     }
 
     // =========================================================
-    // NEW: Transition logic (แดง->เขียว = Gap, แดง->แดง = No Gap)
+    //  GLUE GAP DETECTION (VALLEY TRANSITION)
+    //  - Gap (OK): แดง -> เขียว  (valley ดำลงจริง)
+    //  - No Gap (NG): แดง -> แดง (valley ไม่ดำลง)
+    //
+    //  ✅ ถ้าคุณยัง "ไม่เจอ No Gap" ให้ทำให้ NG ง่ายขึ้น:
+    //     - ลด VALLEY_THR_MULT ลง (เช่น 1.35 -> 1.6)
+    //     - เพิ่ม PROM_THR_MULT ขึ้น (เช่น 2.0 -> 2.3)
+    //
+    //  ✅ ถ้าคุณรู้สึก "No Gap เข้มเกิน" ให้ทำให้ NG ยากขึ้น:
+    //     - ลด PROM_THR_MULT ลง (2.0 -> 1.7)
+    //     - ลด VALLEY_THR_MULT ลง (1.35 -> 1.1) *หมายเหตุ: ยิ่งเล็ก = Gap ง่ายขึ้น
     // =========================================================
-// ✅ Replace your existing classifyGapByTransition(...) with this softer version
-function classifyGapByTransition(smoothed, peaks, idx, med, mad, minDist, maxY) {
-  const y0 = peaks[idx].index;
-  const yNext = (idx + 1 < peaks.length) ? peaks[idx + 1].index : Math.min(maxY, y0 + minDist);
+    const GLUE_TUNE = {
+      // ยิ่งใหญ่ = valleyThr ยิ่งต่ำ (No Gap ง่ายขึ้น)
+      VALLEY_THR_MULT: 1.35,
 
-  const start = Math.min(maxY, y0 + 2);
-  const end   = Math.max(start + 2, Math.min(maxY, yNext - 2));
+      // ยิ่งใหญ่ = prominence ต้องมากขึ้น (No Gap ง่ายขึ้น)
+      PROM_THR_MULT: 2.0,
 
-  let valleyMin = Infinity;
-  for (let y = start; y <= end; y++) valleyMin = Math.min(valleyMin, smoothed[y]);
+      // ใกล้กันเท่าไรถือว่า "แดงติดกัน" (ช่วยตัด NG)
+      CLOSE_DIST_MULT: 0.55,
 
-  const peakVal = smoothed[y0];
-  const prominence = peakVal - valleyMin;
+      // กัน peak หลุด (ถ้า peak ห่างมากผิดปกติ อนุโลม)
+      PEAK_MISS_FALLBACK: 1.8
+    };
 
-  // ==============================
-  //  SOFTENING KNOBS (ปรับได้)
-  // ==============================
-  const SENS = 1.0;        // เพิ่มให้ "จับ Gap ง่ายขึ้น" เช่น 1.15 / 1.30
-  const RED_GUARD = 0.9;   // ลดลง = "แดงติดกัน" จะไม่สรุป No Gap ง่าย
+    function rangeMin(arr, a, b) {
+      let mn = Infinity;
+      for (let i = a; i <= b; i++) mn = Math.min(mn, arr[i]);
+      return mn;
+    }
 
-  // เดิมคุณใช้: valleyThr = max(25, med + mad*0.6)
-  // ✅ Soft: เพิ่มเพดาน valleyThr ให้สูงขึ้น (ยอมให้ "เขียว" ไม่ต้องมืดมาก)
-  const valleyThr = Math.max(30, med + mad * (0.85 * SENS));
+    function valleyBetweenPeaks(smoothed, y0, y1, maxY) {
+      const start = clamp(y0 + 2, 0, maxY);
+      const end = clamp(y1 - 2, 0, maxY);
+      if (end <= start) return smoothed[clamp(Math.floor((y0 + y1) / 2), 0, maxY)];
+      return rangeMin(smoothed, start, end);
+    }
 
-  // เดิมคุณใช้: promThr = max(120, mad*5.0)
-  // ✅ Soft: ลด promThr ลง (ให้ prominence น้อยกว่ายังถือว่า Gap ได้)
-  const promThr = Math.max(70, mad * (3.2 / SENS));
+    function classifyGapByValley(smoothed, y0, y1, med, mad, minDist, maxY) {
+      const valleyMin = valleyBetweenPeaks(smoothed, y0, y1, maxY);
+      const peakVal = smoothed[y0];
+      const prominence = peakVal - valleyMin;
 
-  // ระยะที่ถือว่า "แดงติดกัน"
-  // เดิม: < max(8, minDist*0.75)
-  // ✅ Soft: ต้องใกล้กว่านี้จริงๆถึงเรียกติดกัน
-  const closeRed = (idx + 1 < peaks.length) && ((yNext - y0) < Math.max(6, minDist * (0.55 * RED_GUARD)));
+      // ✅ ปรับให้ "เจอ No Gap ในภาพ" มากขึ้น:
+      // valleyThr ต่ำลง => ต้องดำลงจริงถึงเป็น Gap
+      const valleyThr = med - (mad * GLUE_TUNE.VALLEY_THR_MULT);
 
-  // เงื่อนไข Gap
-  const hasGap = (valleyMin <= valleyThr) && (prominence >= promThr);
+      // prominence ต้องมากพอถึงเป็น Gap จริง
+      const promThr = Math.max(220, mad * GLUE_TUNE.PROM_THR_MULT);
 
-  // ✅ Soft rule:
-  // ถ้าแดงติดกัน "แต่" valley ลงพอสมควร ให้ยังไม่ตัดเป็น No Gap ทันที
-  const valleyLooksLikeGap = (valleyMin <= (valleyThr * 1.08)); // เผื่ออีกนิด
-  if (closeRed && !hasGap && !valleyLooksLikeGap) return false;
+      const closeRed = (y1 - y0) < Math.max(6, minDist * GLUE_TUNE.CLOSE_DIST_MULT);
 
-  return hasGap || valleyLooksLikeGap; // ช่วยลด false No Gap
-}
-   
-    // =========================================================
-    //  UPDATED LOGIC: GLUE GAP DETECTION + BELL CURVE + HISTOGRAM
-    // =========================================================
+      const valleyLooksGap = (valleyMin <= valleyThr);
+      const promLooksGap = (prominence >= promThr);
+
+      // valley ไม่ดำลง => No Gap
+      if (!valleyLooksGap) {
+        // กันเคส peak หลุด (ถ้าห่างมากผิดปกติ และ prominence แรงมาก) => ยังให้เป็น Gap
+        if (!closeRed && (y1 - y0) > minDist * GLUE_TUNE.PEAK_MISS_FALLBACK && prominence > promThr * 1.2) {
+          return true;
+        }
+        return false;
+      }
+
+      // มี valley ดำลงแล้ว แต่ prominence ยังไม่พอ => No Gap
+      if (!promLooksGap) return false;
+
+      return true;
+    }
+
     function processSheetFrame() {
       if (sheetFrozen) return;
       if (video.readyState !== video.HAVE_ENOUGH_DATA) return;
@@ -1109,23 +1125,22 @@ function classifyGapByTransition(smoothed, peaks, idx, med, mad, minDist, maxY) 
       const smoothed = movingAverage(profile, 4);
       const { med, mad } = robustStats(smoothed);
 
-      const layerThreshold = Math.max(30, mad * 1.5);
-      const gapThreshold = Math.max(100, mad * 4.5); // kept for debug / reference
+      // Peak finding
+      const layerThreshold = Math.max(30, mad * 1.4);
       const minDist = Math.floor(roiH_v / 12);
-
       let peaks = findPeaksDynamic(smoothed, layerThreshold, minDist);
 
       const sx = roiW_disp / roiW_v;
       const sy = roiH_disp / roiH_v;
 
       const results = [];
-      let maxW = 0;
 
       peaks.forEach((peak, idx) => {
         if (peak.index > roiH_v * 0.96) return;
 
         const localY_v = peak.index;
         const drawY = roiY_disp + localY_v * sy;
+
         const gapGeo = analyzeGapWidthRow(data, roiW_v, roiH_v, localY_v);
 
         let st = layerStabilizer[idx];
@@ -1136,34 +1151,20 @@ function classifyGapByTransition(smoothed, peaks, idx, med, mad, minDist, maxY) 
         const dispW = Math.max(40, st.width * sx);
         const dispX = roiX_disp + (roiW_disp - dispW) / 2;
 
-        maxW = Math.max(maxW, dispW);
         const widthPx = Math.round(dispW);
 
-        const peakValue = smoothed[localY_v];
+        // ✅ Transition decision using valley between peaks
+        const maxY = roiH_v - 1;
+        const y0 = localY_v;
+        const y1 = (idx + 1 < peaks.length) ? peaks[idx + 1].index : Math.min(maxY, y0 + minDist);
 
-        // ✅ NEW DECISION: red->green vs red->red
-        const hasGap = classifyGapByTransition(
-          smoothed,
-          peaks,
-          idx,
-          med,
-          mad,
-          minDist,
-          roiH_v - 1
-        );
+        const isGap = classifyGapByValley(smoothed, y0, y1, med, mad, minDist, maxY);
 
-        let status = hasGap ? "OK" : "NG";
-        let boxColor = "#34d399";
-        let bgColor = "rgba(52, 211, 153, 0.2)";
-        let labelText = `#${idx + 1} (${widthPx}px)`;
-        let xOffset = 65;
-
-        if (status === "NG") {
-          boxColor = "#ef4444";
-          bgColor = "rgba(239, 68, 68, 0.2)";
-          labelText = `NO GAP ${idx + 1}`;
-          xOffset = 80;
-        }
+        let status = isGap ? "OK" : "NG";
+        let boxColor = isGap ? "#34d399" : "#ef4444";
+        let bgColor = isGap ? "rgba(52, 211, 153, 0.2)" : "rgba(239, 68, 68, 0.2)";
+        let labelText = isGap ? `#${idx + 1} (${widthPx}px)` : `NO GAP ${idx + 1}`;
+        let xOffset = isGap ? 65 : 80;
 
         sheetCtx.fillStyle = bgColor;
         sheetCtx.fillRect(dispX, drawY - 8, dispW, 16);
@@ -1173,7 +1174,7 @@ function classifyGapByTransition(smoothed, peaks, idx, med, mad, minDist, maxY) 
         sheetCtx.font = "bold 12px 'JetBrains Mono'";
         sheetCtx.fillText(labelText, roiX_disp - xOffset, drawY + 4);
 
-        results.push({ layer: idx + 1, w: dispW, status: status, peak: peakValue, thr: gapThreshold });
+        results.push({ layer: idx + 1, w: dispW, status: status });
       });
 
       // Update Header & Summary
@@ -1185,13 +1186,18 @@ function classifyGapByTransition(smoothed, peaks, idx, med, mad, minDist, maxY) 
       const header = document.getElementById("glue-header");
 
       if (ngCount > 0) {
-        statusGroup.innerHTML = `<div class="gc-status-badge" style="color:#ef4444; background:rgba(239,68,68,0.1); border-color:rgba(248,113,113,0.2)"><i data-lucide="x-circle"></i> FAIL</div>`;
+        statusGroup.innerHTML =
+          `<div class="gc-status-badge" style="color:#ef4444; background:rgba(239,68,68,0.1); border-color:rgba(248,113,113,0.2)">
+            <i data-lucide="x-circle"></i> FAIL
+          </div>`;
         header.className = "glue-compact-header status-fail";
       } else if (expected >= 7 && expected <= 8) {
-        statusGroup.innerHTML = `<div class="gc-status-badge"><i data-lucide="check-circle-2" style="color:#34d399"></i> PASS</div>`;
+        statusGroup.innerHTML =
+          `<div class="gc-status-badge"><i data-lucide="check-circle-2" style="color:#34d399"></i> PASS</div>`;
         header.className = "glue-compact-header status-pass";
       } else {
-        statusGroup.innerHTML = `<div class="gc-status-badge"><i data-lucide="alert-circle"></i> SCANNING</div>`;
+        statusGroup.innerHTML =
+          `<div class="gc-status-badge"><i data-lucide="alert-circle"></i> SCANNING</div>`;
         header.className = "glue-compact-header";
       }
 
@@ -1217,7 +1223,6 @@ function classifyGapByTransition(smoothed, peaks, idx, med, mad, minDist, maxY) 
         uniformity = Math.max(0, 100 - ((avgDev / avgWidth) * 100));
       }
 
-      // Update Stats Header
       const statsHeader = document.getElementById("stats-header");
       if (results.length > 0) {
         statsHeader.style.display = "grid";
@@ -1239,15 +1244,12 @@ function classifyGapByTransition(smoothed, peaks, idx, med, mad, minDist, maxY) 
         document.getElementById("empty-scan-msg").style.display = "flex";
       }
 
-      // --- DRAW BELL CURVE & HISTOGRAM ---
       drawBellCurve(validGaps, avgWidth, stdDev);
-
       lucide.createIcons();
     }
 
     function drawBellCurve(values, mean, stdDev) {
       distCtx.clearRect(0, 0, distCanvas.width, distCanvas.height);
-
       if (values.length < 2) return;
 
       const w = distCanvas.width;
@@ -1264,7 +1266,6 @@ function classifyGapByTransition(smoothed, peaks, idx, med, mad, minDist, maxY) 
       const getGaussian = (x) => (1 / (safeSD * Math.sqrt(2 * Math.PI))) * Math.exp(-0.5 * Math.pow((x - mean) / safeSD, 2));
       const maxY = getGaussian(mean);
 
-      // Histogram
       const binCount = 8;
       const binWidth = rangeX / binCount;
       const bins = new Array(binCount).fill(0);
@@ -1275,30 +1276,27 @@ function classifyGapByTransition(smoothed, peaks, idx, med, mad, minDist, maxY) 
       });
 
       const maxBinVal = Math.max(...bins, 1);
-      const barScaleY = (h - 2 * padY) * 0.7;
+      const barScaleY = (h - 2*padY) * 0.7;
 
       distCtx.fillStyle = "rgba(255, 255, 255, 0.08)";
       bins.forEach((count, i) => {
         const hBar = (count / maxBinVal) * barScaleY;
         const xBar = mapX(minX + i * binWidth);
         const yBar = h - padY - hBar;
-        const wBar = ((w - 2 * padX) / binCount) - 2;
+        const wBar = ((w - 2*padX) / binCount) - 2;
         if (hBar > 0) distCtx.fillRect(xBar, yBar, wBar, hBar);
       });
 
-      // Bell curve
       const mapY = (prob) => h - padY - (prob / maxY) * (h - 2 * padY);
 
       distCtx.beginPath();
       distCtx.moveTo(mapX(minX), h - padY);
-
       const steps = 60;
       for (let i = 0; i <= steps; i++) {
         const xVal = minX + (rangeX * (i / steps));
         const yVal = getGaussian(xVal);
         distCtx.lineTo(mapX(xVal), mapY(yVal));
       }
-
       distCtx.lineTo(mapX(maxX), h - padY);
       distCtx.closePath();
 
@@ -1312,7 +1310,6 @@ function classifyGapByTransition(smoothed, peaks, idx, med, mad, minDist, maxY) 
       distCtx.lineWidth = 2;
       distCtx.stroke();
 
-      // Center line
       const cx = mapX(mean);
       distCtx.beginPath();
       distCtx.strokeStyle = "rgba(255,255,255,0.3)";
@@ -1322,7 +1319,6 @@ function classifyGapByTransition(smoothed, peaks, idx, med, mad, minDist, maxY) 
       distCtx.stroke();
       distCtx.setLineDash([]);
 
-      // Dots
       values.forEach(val => {
         const vx = mapX(val);
         const vy = mapY(getGaussian(val));
