--- a/index.html
+++ b/index.html
@@ -720,6 +720,16 @@
     const AREA_Z_ENTER = 2.2;
     const AREA_Z_EXIT  = 1.6;
 
+    // ===== Feature Z thresholds (robust, auto-adapt) =====
+    // Higher profile mean / higher HF / higher std  => more "corrugation" => NO GAP (red)
+    const FEAT_Z_MEAN_ENTER = 1.15, FEAT_Z_MEAN_EXIT = 0.65;
+    const FEAT_Z_HF_ENTER   = 1.10, FEAT_Z_HF_EXIT   = 0.60;
+    const FEAT_Z_STD_ENTER  = 1.00, FEAT_Z_STD_EXIT  = 0.55;
+
+    // Strong "valley very low" indicates true GAP => force green candidate
+    const VALLEY_Z_GREEN_ENTER = 1.10;
+    const VALLEY_Z_GREEN_EXIT  = 0.70;
+
     // --- helpers ---
     function clamp(v, a, b) { return Math.max(a, Math.min(b, v)); }
     function lerp(a, b, t) { return (1 - t) * a + t * b; }
@@ -980,6 +990,87 @@
       return picked;
     }
 
+    // ===============================
+    // EXTRA HELPERS (GlueGap only)
+    // ===============================
+    function median3(a, b, c) {
+      if (a > b) { const t = a; a = b; b = t; }
+      if (b > c) { const t = b; b = c; c = t; }
+      if (a > b) { const t = a; a = b; b = t; }
+      return b;
+    }
+
+    function safeSigmaFromMad(mad, fallback) {
+      const s = 1.4826 * (mad || 0);
+      return (s > 1e-6) ? s : Math.max(1, fallback || 1);
+    }
+
+    // Build robust profile using 3 vertical bands and median-combine.
+    // This reduces sensitivity to local shadow / reflection / stains.
+    function buildProfileMultiBand(data, w, h, bands) {
+      const prof = new Float32Array(h);
+
+      for (let y = 0; y < h; y++) {
+        const row = y * w * 4;
+
+        let vals = [];
+        for (const [xs, xe] of bands) {
+          const start = Math.max(0, Math.min(w - 1, xs));
+          const end   = Math.max(start + 1, Math.min(w, xe));
+          let sumL = 0, cnt = 0;
+
+          for (let x = start; x < end; x++) {
+            const i = row + x * 4;
+            const luma = data[i] * 0.299 + data[i + 1] * 0.587 + data[i + 2] * 0.114;
+            sumL += luma; cnt++;
+          }
+
+          const avgL = cnt ? (sumL / cnt) : 255;
+          const darkness = Math.max(0, 255 - avgL);
+          vals.push(Math.pow(darkness, 1.5));
+        }
+
+        // median of 3 bands
+        prof[y] = median3(vals[0], vals[1], vals[2]);
+      }
+      return prof;
+    }
+
+    // Segment features computed on smoothed profile within [y0,y1)
+    function segmentFeatures1D(smoothed, y0, y1) {
+      y0 = Math.max(0, Math.min(smoothed.length - 1, y0));
+      y1 = Math.max(y0 + 1, Math.min(smoothed.length, y1));
+
+      let n = 0;
+      let mean = 0, m2 = 0;
+      let hfSum = 0;
+      let prev = smoothed[y0];
+      let minV = prev;
+      let maxV = prev;
+
+      for (let y = y0; y < y1; y++) {
+        const v = smoothed[y];
+        n++;
+
+        // Welford
+        const d = v - mean;
+        mean += d / n;
+        m2 += d * (v - mean);
+
+        if (y > y0) hfSum += Math.abs(v - prev);
+        prev = v;
+
+        if (v < minV) minV = v;
+        if (v > maxV) maxV = v;
+      }
+
+      const varP = (n > 1) ? (m2 / (n - 1)) : 0;
+      const stdP = Math.sqrt(Math.max(0, varP));
+      const hfP = (n > 1) ? (hfSum / (n - 1)) : 0;
+
+      return { meanP: mean, stdP, hfP, valleyMin: minV, peakMax: maxV };
+    }
+
     // =========================================================
     // Majority vote + perma-green state helpers
     // =========================================================
@@ -1122,7 +1213,7 @@
     }
 
     // =========================================================
-    // GLUE GAP DETECTION (robust + majority vote + perma-green)
+    // GLUE GAP DETECTION (robust + multi-feature + vote + perma-green)
     // =========================================================
     function processSheetFrame() {
       if (sheetFrozen) return;
@@ -1171,26 +1262,16 @@
       const imgData = procCtx.getImageData(0, 0, roiW_v, roiH_v);
       const data = imgData.data;
 
-      // Profile Scan
-      const profile = new Float32Array(roiH_v);
-      const centerStart = Math.floor(roiW_v * 0.35);
-      const centerEnd = Math.floor(roiW_v * 0.65);
-      const centerW = centerEnd - centerStart;
+      // Profile Scan (ROBUST: 3 bands + median)
+      const bands = [
+        [Math.floor(roiW_v * 0.30), Math.floor(roiW_v * 0.40)],
+        [Math.floor(roiW_v * 0.45), Math.floor(roiW_v * 0.55)],
+        [Math.floor(roiW_v * 0.60), Math.floor(roiW_v * 0.70)],
+      ];
 
-      for (let y = 0; y < roiH_v; y++) {
-        let sumLuma = 0;
-        const rowOffset = y * roiW_v * 4;
-        for (let x = centerStart; x < centerEnd; x++) {
-          const i = rowOffset + x * 4;
-          const luma = data[i] * 0.299 + data[i + 1] * 0.587 + data[i + 2] * 0.114;
-          sumLuma += luma;
-        }
-        const avgLuma = sumLuma / centerW;
-        const darkness = Math.max(0, 255 - avgLuma);
-        profile[y] = Math.pow(darkness, 1.5);
-      }
-
+      const profile = buildProfileMultiBand(data, roiW_v, roiH_v, bands);
       const smoothed = movingAverage(profile, 4);
+
       const { mad } = robustStats(smoothed);
       const layerThreshold = Math.max(30, mad * 1.5);
       const gapThreshold = Math.max(100, mad * 4.5);
@@ -1211,9 +1292,14 @@
         return { y, y0, y1 };
       });
 
-      // PASS1: compute stable area per layer + store rendering info
+      // PASS1: compute stable area per layer + compute segment features
       const rows = [];
       const allAreas = [];
+      const allMeanP = [];
+      const allHfP = [];
+      const allStdP = [];
+      const allValley = [];
+
       bounds.forEach((b, idx) => {
         if (b.y > roiH_v * 0.96) return;
 
@@ -1237,13 +1323,24 @@
         const A = Math.max(0, st.area);
         const peakValue = smoothed[localY_v];
 
-        // keep your width bar visual
+        // NEW: features inside each layer segment
+        const feat = segmentFeatures1D(smoothed, y0, y1);
+
+        // keep width bar visual
         const gapGeo = analyzeGapWidthRow(data, roiW_v, roiH_v, localY_v);
         const dispW = Math.max(40, gapGeo.width * sx);
         const dispX = roiX_disp + (roiW_disp - dispW) / 2;
 
-        rows.push({ idx, A, peakValue, dispX, dispW, drawY });
+        rows.push({
+          idx, A, peakValue, dispX, dispW, drawY,
+          meanP: feat.meanP, hfP: feat.hfP, stdP: feat.stdP, valleyMin: feat.valleyMin
+        });
+
         allAreas.push(A);
+        allMeanP.push(feat.meanP);
+        allHfP.push(feat.hfP);
+        allStdP.push(feat.stdP);
+        allValley.push(feat.valleyMin);
       });
 
       const results = [];
@@ -1255,10 +1352,22 @@
         medA = rs.med;
         madA = rs.mad;
       }
-      // Robust sigma from MAD (avoid 0)
-      const sigmaA = (madA > 1e-6) ? (1.4826 * madA) : Math.max(1, medA * 0.12);
+      const sigmaA = safeSigmaFromMad(madA, medA * 0.12);
 
-      // PASS2: classification using (peakCandidate OR lowAreaCandidate) -> vote -> stable state -> perma-green
+      // Robust stats for features
+      let medMean=0, madMean=0, medHF=0, madHF=0, medStd=0, madStd=0, medVal=0, madVal=0;
+
+      if (allMeanP.length > 0) { const s = robustStats(allMeanP); medMean = s.med; madMean = s.mad; }
+      if (allHfP.length   > 0) { const s = robustStats(allHfP);   medHF   = s.med; madHF   = s.mad; }
+      if (allStdP.length  > 0) { const s = robustStats(allStdP);  medStd  = s.med; madStd  = s.mad; }
+      if (allValley.length> 0) { const s = robustStats(allValley);medVal  = s.med; madVal  = s.mad; }
+
+      const sigmaMean = safeSigmaFromMad(madMean, medMean * 0.20);
+      const sigmaHF   = safeSigmaFromMad(madHF,   medHF   * 0.30);
+      const sigmaStd  = safeSigmaFromMad(madStd,  medStd  * 0.30);
+      const sigmaVal  = safeSigmaFromMad(madVal,  medVal  * 0.20);
+
+      // PASS2: classification -> vote -> stable state -> perma-green
       rows.forEach((r) => {
         const idx = r.idx;
         const A = r.A;
@@ -1268,14 +1377,33 @@
         if (!st) st = {};
         ensureVoteState(st);
 
-        // Candidate from peak (gap strength)
+        // ----- Candidate: multi-feature robust -----
+
+        // 1) Peak candidate (keep as weak hint; not sole decision)
         const peakCandidate = (peakValue < gapThreshold);
 
-        // Robust low-area candidate (compare to median)
-        const z = (medA - A) / sigmaA; // low area => z positive
-        const areaLowCandidate = (st.state === "NG") ? (z >= AREA_Z_EXIT) : (z >= AREA_Z_ENTER);
+        // 2) Area low candidate (your original robust logic)
+        const zA = (medA - A) / sigmaA; // low area => zA positive
+        const areaLowCandidate = (st.state === "NG") ? (zA >= AREA_Z_EXIT) : (zA >= AREA_Z_ENTER);
 
-        const isRedCandidate = !!(peakCandidate || areaLowCandidate);
+        // 3) Corrugation-ness from profile features (higher => more NO GAP)
+        const zMean = (r.meanP - medMean) / sigmaMean;
+        const zHF   = (r.hfP   - medHF)   / sigmaHF;
+        const zStd  = (r.stdP  - medStd)  / sigmaStd;
+
+        const meanRed = (st.state === "NG") ? (zMean >= FEAT_Z_MEAN_EXIT) : (zMean >= FEAT_Z_MEAN_ENTER);
+        const hfRed   = (st.state === "NG") ? (zHF   >= FEAT_Z_HF_EXIT)   : (zHF   >= FEAT_Z_HF_ENTER);
+        const stdRed  = (st.state === "NG") ? (zStd  >= FEAT_Z_STD_EXIT)  : (zStd  >= FEAT_Z_STD_ENTER);
+
+        // 4) True GAP strong signal: valleyMin very low -> force green
+        const zValleyGreen = (medVal - r.valleyMin) / sigmaVal; // lower valley => more green confidence
+        const valleyGreenStrong =
+          (st.state === "OK") ? (zValleyGreen >= VALLEY_Z_GREEN_ENTER) : (zValleyGreen >= VALLEY_Z_GREEN_EXIT);
+
+        // Combine: red candidate if corrugation is strong OR areaLowCandidate OR peakCandidate
+        // But if valley indicates strong GAP, force green (avoid false red)
+        let isRedCandidate = !!(areaLowCandidate || meanRed || hfRed || stdRed || peakCandidate);
+        if (valleyGreenStrong) isRedCandidate = false;
 
         // vote window
         pushVote(st, isRedCandidate);
@@ -1320,7 +1448,6 @@
           labelText = `NO GAP ${idx + 1}  A:${Math.round(A)} px²`;
           xOffset = 120;
         } else if (st.permaGreen) {
-          // optional: show a lock indicator
           labelText = `OK* ${idx + 1}  A:${Math.round(A)} px²`;
           xOffset = 90;
         }
