--- a/index.html
+++ b/index.html
@@ -712,13 +712,18 @@
 
     // ===== Perma-green (lock OK forever) =====
     const PERMAGREEN_WINDOW = 50;    // 50 frames confirm window
-    const PERMAGREEN_RATIO  = 0.70;  // ✅ ตามที่คุณขอ: ต้องเขียว >= 70% ของ 50 เฟรมถึงจะล็อกถาวร
+    const PERMAGREEN_RATIO  = 0.70;
 
-    // ===== Robust low-area detection (Median + MAD) =====
-    // ใช้ z-score แบบ robust: z = (median - area) / (1.4826*MAD)
-    // hysteresis เพื่อลดแกว่ง
+    // ===== Robust low-area detection (legacy thresholds; kept for compatibility) =====
     const AREA_Z_ENTER = 2.2;
     const AREA_Z_EXIT  = 1.6;
+
+    // ===== NEW: Low-area "score" thresholds (log(area_ratio) ensemble) =====
+    // score 0..1 : higher => more confident "area abnormally low" => NO GAP (red)
+    const AREA_SCORE_ENTER = 0.62;   // enter NG via low-area
+    const AREA_SCORE_EXIT  = 0.48;   // exit NG via low-area
+    const AREA_SCORE_STRONG_RED = 0.80; // strong low-area => red dominates (valley can't override)
+    const LOWAREA_STREAK_NEED = 3;   // must be low-area for >= 3 frames before counting as candidate
 
     // ===== Feature Z thresholds (robust, auto-adapt) =====
     // Higher profile mean / higher HF / higher std  => more "corrugation" => NO GAP (red)
@@ -726,7 +731,7 @@
     const FEAT_Z_HF_ENTER   = 1.10, FEAT_Z_HF_EXIT   = 0.60;
     const FEAT_Z_STD_ENTER  = 1.00, FEAT_Z_STD_EXIT  = 0.55;
 
-    // Strong "valley very low" indicates true GAP => force green candidate
+    // Strong "valley very low" indicates true GAP => green hint
     const VALLEY_Z_GREEN_ENTER = 1.10;
     const VALLEY_Z_GREEN_EXIT  = 0.70;
 
@@ -963,6 +968,29 @@
       return { med, mad };
     }
 
+    // ===== NEW: quantiles + sigmoid (for low-area score ensemble) =====
+    function quantileSorted(sorted, q){
+      const n = sorted.length;
+      if (!n) return 0;
+      const pos = (n - 1) * q;
+      const base = Math.floor(pos);
+      const rest = pos - base;
+      if ((base + 1) < n) return sorted[base] + rest * (sorted[base + 1] - sorted[base]);
+      return sorted[base];
+    }
+
+    function robustQuantiles(arr){
+      const a = Array.from(arr);
+      a.sort((x,y)=>x-y);
+      const q1 = quantileSorted(a, 0.25);
+      const q3 = quantileSorted(a, 0.75);
+      const p10 = quantileSorted(a, 0.10);
+      const iqr = Math.max(1e-9, q3 - q1);
+      return { q1, q3, iqr, p10 };
+    }
+
+    function sigmoid(x){ return 1 / (1 + Math.exp(-x)); }
+
     function findPeaksDynamic(arr, prominence, minDist) {
       const candidates = [];
       for (let i = 1; i < arr.length - 1; i++) {
@@ -1006,7 +1034,6 @@
     }
 
     // Build robust profile using 3 vertical bands and median-combine.
-    // This reduces sensitivity to local shadow / reflection / stains.
     function buildProfileMultiBand(data, w, h, bands) {
       const prof = new Float32Array(h);
 
@@ -1030,7 +1057,6 @@
           vals.push(Math.pow(darkness, 1.5));
         }
 
-        // median of 3 bands
         prof[y] = median3(vals[0], vals[1], vals[2]);
       }
       return prof;
@@ -1052,7 +1078,6 @@
         const v = smoothed[y];
         n++;
 
-        // Welford
         const d = v - mean;
         mean += d / n;
         m2 += d * (v - mean);
@@ -1083,15 +1108,17 @@
       }
       if (!st.state) st.state = "OK";
 
-      // --- perma-green buffers ---
       if (!st.confirm || st.confirm.length !== PERMAGREEN_WINDOW) {
-        st.confirm = new Uint8Array(PERMAGREEN_WINDOW); // 1=green,0=red
+        st.confirm = new Uint8Array(PERMAGREEN_WINDOW);
         st.confirmSum = 0;
         st.confirmPtr = 0;
         st.confirmCount = 0;
       }
       if (typeof st.everGreen !== "boolean") st.everGreen = false;
       if (typeof st.permaGreen !== "boolean") st.permaGreen = false;
+
+      // NEW: low-area streak buffer
+      if (typeof st.lowStreak !== "number") st.lowStreak = 0;
     }
 
     function pushVote(st, isRedCandidate) {
@@ -1214,6 +1241,7 @@
 
     // =========================================================
     // GLUE GAP DETECTION (robust + multi-feature + vote + perma-green)
+    // + NEW: low-area outlier (area_ratio/log + MAD+IQR+P10 + streak)
     // =========================================================
     function processSheetFrame() {
       if (sheetFrozen) return;
@@ -1300,6 +1328,10 @@
       const allStdP = [];
       const allValley = [];
 
+      // NEW: low-area ensemble inputs (area ratio + log)
+      const allRatios = [];
+      const allLogR = [];
+
       bounds.forEach((b, idx) => {
         if (b.y > roiH_v * 0.96) return;
 
@@ -1323,6 +1355,11 @@
         const A = Math.max(0, st.area);
         const peakValue = smoothed[localY_v];
 
+        // NEW: normalize area by segment geometry to reduce distance/scale effects
+        const segAreaPx2 = Math.max(1, (x1 - x0) * (y1 - y0));
+        const ratio = A / segAreaPx2;          // 0..1 (approx)
+        const logR = Math.log1p(ratio);        // stabilize skew
+
         // NEW: features inside each layer segment
         const feat = segmentFeatures1D(smoothed, y0, y1);
 
@@ -1332,11 +1369,14 @@
         const dispX = roiX_disp + (roiW_disp - dispW) / 2;
 
         rows.push({
-          idx, A, peakValue, dispX, dispW, drawY,
+          idx, A, ratio, logR, segAreaPx2, peakValue, dispX, dispW, drawY,
           meanP: feat.meanP, hfP: feat.hfP, stdP: feat.stdP, valleyMin: feat.valleyMin
         });
 
         allAreas.push(A);
+        allRatios.push(ratio);
+        allLogR.push(logR);
+
         allMeanP.push(feat.meanP);
         allHfP.push(feat.hfP);
         allStdP.push(feat.stdP);
@@ -1345,7 +1385,7 @@
 
       const results = [];
 
-      // Robust area stats (Median + MAD)
+      // Robust area stats (Median + MAD) (kept)
       let medA = 0, madA = 0;
       if (allAreas.length > 0) {
         const rs = robustStats(allAreas);
@@ -1353,6 +1393,19 @@
         madA = rs.mad;
       }
       const sigmaA = safeSigmaFromMad(madA, medA * 0.12);
+
+      // NEW: robust stats for log(area_ratio)
+      let medLogR=0, madLogR=0, q1LogR=0, q3LogR=0, iqrLogR=0, p10LogR=0;
+      if (allLogR.length > 0) {
+        const rs = robustStats(allLogR);
+        medLogR = rs.med;
+        madLogR = rs.mad;
+
+        const qs = robustQuantiles(allLogR);
+        q1LogR = qs.q1; q3LogR = qs.q3; iqrLogR = qs.iqr; p10LogR = qs.p10;
+      }
+      const sigmaLogR = safeSigmaFromMad(madLogR, Math.max(1e-6, Math.abs(medLogR) * 0.25 + 0.02));
+      const IQR_K = 1.5;
 
       // Robust stats for features
       let medMean=0, madMean=0, medHF=0, madHF=0, medStd=0, madStd=0, medVal=0, madVal=0;
@@ -1379,14 +1432,37 @@
 
         // ----- Candidate: multi-feature robust -----
 
-        // 1) Peak candidate (keep as weak hint; not sole decision)
+        // 1) Peak candidate (weak hint)
         const peakCandidate = (peakValue < gapThreshold);
 
-        // 2) Area low candidate (your original robust logic)
+        // 2) Legacy area low candidate (kept but no longer primary)
         const zA = (medA - A) / sigmaA; // low area => zA positive
-        const areaLowCandidate = (st.state === "NG") ? (zA >= AREA_Z_EXIT) : (zA >= AREA_Z_ENTER);
+        const legacyAreaLowCandidate = (st.state === "NG") ? (zA >= AREA_Z_EXIT) : (zA >= AREA_Z_ENTER);
 
-        // 3) Corrugation-ness from profile features (higher => more NO GAP)
+        // 3) NEW: Low-area ensemble score on log(area_ratio)
+        // zLow: lower-than-median => positive
+        const zLow = (medLogR - r.logR) / sigmaLogR;
+
+        // smooth score from MAD z
+        const scoreMad = sigmoid((zLow - 1.0) * 1.2);
+
+        // IQR fence + P10 checks (binary helpers)
+        const fence = q1LogR - IQR_K * iqrLogR;
+        const scoreIqr = (r.logR < fence) ? 1 : 0;
+        const scoreP10 = (r.logR < p10LogR) ? 1 : 0;
+
+        // final score 0..1
+        const areaLowScore = (0.70 * scoreMad) + (0.20 * scoreIqr) + (0.10 * scoreP10);
+
+        // hysteresis thresholds for score, plus streak guard
+        const thr = (st.state === "NG") ? AREA_SCORE_EXIT : AREA_SCORE_ENTER;
+
+        if (areaLowScore >= thr) st.lowStreak++;
+        else st.lowStreak = Math.max(0, st.lowStreak - 1);
+
+        const areaLowCandidate = (st.lowStreak >= LOWAREA_STREAK_NEED);
+
+        // 4) Corrugation-ness from profile features (higher => more NO GAP)
         const zMean = (r.meanP - medMean) / sigmaMean;
         const zHF   = (r.hfP   - medHF)   / sigmaHF;
         const zStd  = (r.stdP  - medStd)  / sigmaStd;
@@ -1395,15 +1471,25 @@
         const hfRed   = (st.state === "NG") ? (zHF   >= FEAT_Z_HF_EXIT)   : (zHF   >= FEAT_Z_HF_ENTER);
         const stdRed  = (st.state === "NG") ? (zStd  >= FEAT_Z_STD_EXIT)  : (zStd  >= FEAT_Z_STD_ENTER);
 
-        // 4) True GAP strong signal: valleyMin very low -> force green
-        const zValleyGreen = (medVal - r.valleyMin) / sigmaVal; // lower valley => more green confidence
+        // 5) True GAP signal: valleyMin very low -> green hint
+        const zValleyGreen = (medVal - r.valleyMin) / sigmaVal;
         const valleyGreenStrong =
           (st.state === "OK") ? (zValleyGreen >= VALLEY_Z_GREEN_ENTER) : (zValleyGreen >= VALLEY_Z_GREEN_EXIT);
 
-        // Combine: red candidate if corrugation is strong OR areaLowCandidate OR peakCandidate
-        // But if valley indicates strong GAP, force green (avoid false red)
-        let isRedCandidate = !!(areaLowCandidate || meanRed || hfRed || stdRed || peakCandidate);
-        if (valleyGreenStrong) isRedCandidate = false;
+        // Combine: "low area abnormal" should make NG (red) smarter & stronger
+        // Use NEW areaLowCandidate as primary; legacyAreaLowCandidate remains as backup
+        let isRedCandidate = !!(
+          areaLowCandidate ||
+          legacyAreaLowCandidate ||
+          meanRed || hfRed || stdRed ||
+          peakCandidate
+        );
+
+        // IMPORTANT: valley may suppress red ONLY if low-area isn't strongly confident
+        // (so low-area abnormal still wins)
+        if (valleyGreenStrong && areaLowScore < AREA_SCORE_STRONG_RED) {
+          isRedCandidate = false;
+        }
 
         // vote window
         pushVote(st, isRedCandidate);
@@ -1440,6 +1526,7 @@
         let bgColor = "rgba(52, 211, 153, 0.2)";
         let xOffset = 78;
 
+        // show area + (optional) ratio debug (kept compact)
         let labelText = `#${idx + 1}  A:${Math.round(A)} px²`;
 
         if (status === "NG") {
