--- a/index.html
+++ b/index.html
@@ -907,12 +907,12 @@
                 </div>
                 <div class="sum-item">
                   <div class="sum-val text-ok" id="sum-gap">0</div>
-                  <div class="sum-lbl">NORMAL</div>
+                  <div class="sum-lbl">NORMAL GAP</div>
                 </div>
                 <!-- ✅ เปลี่ยนจาก No Gap -> Red Frames (นับกรอบสีแดงทั้งหมด) -->
                 <div class="sum-item">
                   <div class="sum-val text-ng" id="sum-red">0</div>
-                  <div class="sum-lbl">WARNING</div>
+                  <div class="sum-lbl">WARNING GAP</div>
                 </div>
               </div>
             </div>
@@ -2426,3 +2426,4 @@ if (results.length > 0) {
   </script>
 </body>
 </html>
+
